# Interview

./: .gitmodules  CMakeLists.txt  README.md  main.c  main.cpp  mega_c_include.h  mega_cpp_include.h
include/: tc_interview.h
src/: tc_interview.cpp
